--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=gom
-application.vendor=A
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/gom.jar
+dist.jar=${dist.dir}/gomo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/gom
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/gomo
 excludes=
 includes=**
 jar.compress=false
@@ -49,7 +47,6 @@ javac.processorpath=\
 javac.source=11
 javac.target=11
 javac.test.classpath=\
-    ${libs.junit_4.classpath}:\
     ${javac.classpath}:\
     ${build.classes.dir}
 javac.test.modulepath=\
@@ -73,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=gom
-main.class=gom.Gom
+jlink.launcher.name=gomo
+main.class=Jeu.Jeu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -85,13 +82,12 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-ea
+run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${build.test.classes.dir}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
